Bug 7071: overlap in contact selection in sms

--- a/src/pages/sms/components/sms-chat-message/sms-chat-message.scss
+++ b/src/pages/sms/components/sms-chat-message/sms-chat-message.scss
@@ -1,10 +1,7 @@
-@import "./../../../../themes/base/typography";
-
 .sms-chat-message {
   max-width: 41.5rem;
 
   &-body {
-    @extend .body2;
     max-width: 34.5rem;
     border-radius: 1.25rem;
     line-height: 1.25rem;
