--- a/src/pages/sms/components/sms-chat-summary/sms-chat-summary.scss
+++ b/src/pages/sms/components/sms-chat-summary/sms-chat-summary.scss
@@ -1,4 +1,3 @@
-@import "./../../../../themes/base/typography";
 
 .sms-summary {
   min-height: 5.5rem;
@@ -8,11 +7,9 @@
   }
 
   &-message-unread {
-    @extend .subtitle3;
     line-height: 1.25rem;
   }
    &-message-read {
-    @extend .body3;
     line-height: 1.25rem;
     font-size: 0.8125rem;
     color: var(--rgba-color-05);
